<?xml version="1.0" encoding="utf-8"?>
<layout>
    <ScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            tools:context=".features.resultform.ResultActivity"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:paddingStart="@dimen/margin_16dp"
                android:paddingEnd="@dimen/margin_16dp"
                android:paddingBottom="@dimen/margin_32dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/tvLabel1"
                    android:layout_marginTop="@dimen/margin_32dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="@string/label_simulation_result"
                    style="@style/textViewStyle"/>

            <TextView
                    android:id="@+id/tvSimulationResult"
                    app:layout_constraintTop_toBottomOf="@id/tvLabel1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="@dimen/margin_16dp"
                    tools:text="R$ 1.088,69"
                    android:textSize="42sp"
                    android:fontFamily="sans-serif-condensed-medium"
                    style="@style/textViewStyle"/>

            <TextView
                    android:id="@+id/tvLabelTotalProfits"
                    android:textAlignment="textEnd"
                    android:layout_marginTop="@dimen/margin_16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvSimulationResult"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_width="wrap_content"
                    android:text="@string/label_total_profits"
                    style="@style/textViewStyle"/>

            <com.easynvest.views.InvestmentItemComponent
                    android:id="@+id/tvInvestedAmount"
                    app:layout_constraintTop_toTopOf="@id/tvLabelTotalProfits"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="64dp"
                    app:text1="@string/label_invested_amount"
                    app:text2="R$0,00"/>

            <com.easynvest.views.InvestmentItemComponent
                    android:id="@+id/tvGrossAmount"
                    app:layout_constraintTop_toBottomOf="@id/tvInvestedAmount"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16dp"
                    app:text1="@string/label_gross_amount"
                    app:text2="R$0,00"/>

            <com.easynvest.views.InvestmentItemComponent
                    android:id="@+id/tvGrossAmountProfit"
                    app:layout_constraintTop_toBottomOf="@id/tvGrossAmount"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16dp"
                    app:text1="@string/label_gross_amount_profit"
                    app:text2="R$0,00"/>

            <com.easynvest.views.InvestmentItemComponent
                    android:id="@+id/tvTaxesAmount"
                    app:layout_constraintTop_toBottomOf="@id/tvGrossAmountProfit"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16dp"
                    app:text1="@string/label_taxes_amount"
                    app:text2="R$0,00"/>

            <com.easynvest.views.InvestmentItemComponent
                    android:id="@+id/tvNetAmount"
                    app:layout_constraintTop_toBottomOf="@id/tvTaxesAmount"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16dp"
                    app:text1="@string/label_net_amount"
                    app:text2="R$0,00"/>

            <com.easynvest.views.InvestmentItemComponent
                    android:id="@+id/tvMaturityDate"
                    app:layout_constraintTop_toBottomOf="@id/tvNetAmount"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_64dp"
                    app:text1="@string/label_maturity_date_amount"
                    app:text2="R$0,00"/>

            <com.easynvest.views.InvestmentItemComponent
                    android:id="@+id/tvMaturityBusinessDays"
                    app:layout_constraintTop_toBottomOf="@id/tvMaturityDate"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16dp"
                    app:text1="@string/label_maturity_business_days"
                    app:text2="R$0,00"/>

            <com.easynvest.views.InvestmentItemComponent
                    android:id="@+id/tvMonthlyGrossRateProfit"
                    app:layout_constraintTop_toBottomOf="@id/tvMaturityBusinessDays"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16dp"
                    app:text1="@string/label_monthly_gross_rate_profit"
                    app:text2="R$0,00"/>

            <com.easynvest.views.InvestmentItemComponent
                    android:id="@+id/tvRate"
                    app:layout_constraintTop_toBottomOf="@id/tvMonthlyGrossRateProfit"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16dp"
                    app:text1="@string/label_rate_amount"
                    app:text2="R$0,00"/>

            <com.easynvest.views.InvestmentItemComponent
                    android:id="@+id/tvAnnualGrossRateProfit"
                    app:layout_constraintTop_toBottomOf="@id/tvRate"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16dp"
                    app:text1="@string/label_annual_gross_rate_profit"
                    app:text2="R$0,00"/>

            <com.easynvest.views.InvestmentItemComponent
                    android:id="@+id/tvRateProfit"
                    app:layout_constraintTop_toBottomOf="@id/tvAnnualGrossRateProfit"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16dp"
                    app:text1="@string/label_rate_profit"
                    app:text2="R$0,00"/>

            <Button
                    android:id="@+id/btnSimulateAgain"
                    app:layout_constraintTop_toBottomOf="@id/tvRateProfit"
                    android:layout_marginTop="@dimen/margin_32dp"
                    android:layout_marginBottom="@dimen/margin_32dp"
                    android:text="@string/label_simulate_again"
                    style="@style/primaryButtonStyle"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>